src/third_party/nasm/travis/test/br3200749.stderr
./travis/test/br3200749.asm:4: error: label or instruction expected at start of line
./travis/test/br3200749.asm:6: error: label or instruction expected at start of line
