src/third_party/nasm/travis/test/br3200749.asm
%define IFNDEF %ifndef
%define ENDIF %endif

IFNDEF foo
	; bar
ENDIF

